--- a/admin/src/lang/zh-hk.json
+++ b/admin/src/lang/zh-hk.json
@@ -5,5 +5,12 @@
     "yes": "是",
     "no": "否",
     "home": "首頁",
-    "menu": "菜單"
+    "menu": "菜單",
+    "capsicumAnnuum": "泡椒",
+    "drinks": "飲品",
+    "coldFood": "冷盤",
+    "sideDish": "小菜",
+    "signatureDish": "招牌菜",
+    "stapleFood": "主食",
+    "stirFry": "精美小炒"
 }
