--- a/admin/src/lang/zh-hk.json
+++ b/admin/src/lang/zh-hk.json
@@ -9,7 +9,7 @@
     "capsicumAnnuum": "泡椒",
     "drinks": "飲品",
     "coldFood": "冷盤",
-    "sideDish": "小菜",
+    "sideDish": "配菜",
     "signatureDish": "招牌菜",
     "stapleFood": "主食",
     "stirFry": "精美小炒",
