--- a/admin/src/lang/zh-hk.json
+++ b/admin/src/lang/zh-hk.json
@@ -21,5 +21,7 @@
     "active": "在售",
     "inactive": "停售",
     "reset": "重置",
-    "submit": "提交"
+    "submit": "提交",
+    "checkToView": "點選查看",
+    "personalInfo": "個人資料"
 }
