--- a/admin/src/lang/zh-hk.json
+++ b/admin/src/lang/zh-hk.json
@@ -35,5 +35,9 @@
     "addUser": "新增用戶",
     "editUser": "編輯用戶",
     "address_cn": "地址(中)",
-    "address_en": "地址(英)"
+    "address_en": "地址(英)",
+    "pleaseEnterValidPhoneNumber": "請輸入有效的電話號碼",
+    "pleaseEnterValidName": "請輸入有效的名稱",
+    "pleaseEnterValidEmail": "請輸入有效的電郵",
+    "pleaseEnterValidAddress": "請輸入有效的地址"
 }
