develop the add User function

--- a/admin/src/lang/en-us.json
+++ b/admin/src/lang/en-us.json
@@ -40,5 +40,7 @@
     "pleaseEnterValidName": "Please enter a valid name",
     "pleaseEnterValidEmail": "Please enter a valid email",
     "pleaseEnterValidAddress": "Please enter a valid address",
-    "pleaseFillCorrectly": "Please fill in the form correctly"
+    "pleaseFillCorrectly": "Please fill in the form correctly",
+    "addSuccess": "Add successfully",
+    "addFailed": "Add failed"
 }
