--- a/admin/src/lang/zh-hk.json
+++ b/admin/src/lang/zh-hk.json
@@ -42,5 +42,7 @@
     "pleaseEnterValidAddress": "請輸入有效的地址",
     "pleaseFillCorrectly": "請正確填寫表格",
     "addSuccess": "新增成功",
-    "addFailed": "新增失敗"
+    "addFailed": "新增失敗",
+    "editSuccess": "編輯成功",
+    "editFailed": "編輯失敗"
 }
