--- a/customer/src/i18n/en.json
+++ b/customer/src/i18n/en.json
@@ -6,5 +6,15 @@
     "app_title": "BOS",
     "category": "Category",
     "price": "Price",
-    "table_number": "Table Number"
+    "table_number": "Table Number",
+    "added_to_cart": "Added to Cart",
+    "add_to_cart": "Add to Cart",
+    "cart": "Cart",
+    "cart_items": "items",
+    "cart_total": "Total",
+    "empty_cart": "Your cart is empty",
+    "remove_item": "Remove",
+    "checkout": "Checkout",
+    "clear_cart": "Clear Cart",
+    "clear_cart_confirm": "Are you sure you want to clear all items from cart?"
 }
