--- a/admin/src/lang/zh-hk.json
+++ b/admin/src/lang/zh-hk.json
@@ -45,5 +45,8 @@
     "addFailed": "新增失敗",
     "editSuccess": "編輯成功",
     "editFailed": "編輯失敗",
-    "AddUserByExcel": "通過Excel添加用戶"
+    "AddUserByExcel": "通過Excel添加用戶",
+    "AddUserByForm": "通過表格添加用戶",
+    "getTemplate":"獲取Excel範本",
+    "uploadExcel":"上傳Excel"
 }
