Update SQL, Improve Customer MenuScreen, OrderScreen UI and logic

--- a/customer/src/i18n/en.json
+++ b/customer/src/i18n/en.json
@@ -1,20 +1,23 @@
 {
-    "search_placeholder": "Search...",
-    "all_categories": "All Categories",
-    "menu": "Menu",
-    "orders": "Orders",
-    "app_title": "BOS",
-    "category": "Category",
-    "price": "Price",
-    "table_number": "Table Number",
-    "added_to_cart": "Added to Cart",
-    "add_to_cart": "Add to Cart",
-    "cart": "Cart",
-    "cart_items": "items",
-    "cart_total": "Total",
-    "empty_cart": "Your cart is empty",
-    "remove_item": "Remove",
-    "checkout": "Checkout",
-    "clear_cart": "Clear Cart",
-    "clear_cart_confirm": "Are you sure you want to clear all items from cart?"
+  "search_placeholder": "Search...",
+  "all_categories": "All Categories",
+  "menu": "Menu",
+  "orders": "Orders",
+  "app_title": "BOS",
+  "category": "Category",
+  "price": "Price",
+  "table_number": "Table Number",
+  "added_to_cart": "Added to Cart",
+  "add_to_cart": "Add to Cart",
+  "cart": "Cart",
+  "cart_items": "items",
+  "cart_total": "Total",
+  "empty_cart": "Your cart is empty",
+  "remove_item": "Remove",
+  "checkout": "Checkout",
+  "clear_cart": "Clear Cart",
+  "clear_cart_confirm": "Are you sure you want to clear all items from cart?",
+  "total_items": "Items",
+  "total_price": "Total",
+  "no_orders": "No Orders"
 }
