--- a/customer/src/i18n/en.json
+++ b/customer/src/i18n/en.json
@@ -19,6 +19,7 @@
   "clear_cart_confirm": "Are you sure you want to clear all items from cart?",
   "total_items": "Items",
   "total_price": "Total",
+  "service_charge": "Service Charge",
   "no_orders": "No Orders",
   "confirm_order_title": "Confirm Order",
   "confirm_order_content": "Are you sure you want to place this order? No cancellation after order is placed.",
