--- a/customer/src/i18n/zh-CN.json
+++ b/customer/src/i18n/zh-CN.json
@@ -19,6 +19,7 @@
   "clear_cart_confirm": "您确定要清空购物车中的所有商品吗？",
   "total_items": "件商品",
   "total_price": "总计",
+  "service_charge": "多谢加一服务费",
   "no_orders": "没有订单",
   "confirm_order_title": "确认订单",
   "confirm_order_content": "您确定要下单吗？下单后不可取消。",
