--- a/customer/src/i18n/zh-TW.json
+++ b/customer/src/i18n/zh-TW.json
@@ -19,6 +19,7 @@
   "clear_cart_confirm": "您確定要清空購物車中的所有商品嗎？",
   "total_items": "件商品",
   "total_price": "總計",
+  "service_charge": "多謝加一服務費",
   "no_orders": "沒有訂單",
   "confirm_order_title": "確認訂單",
   "confirm_order_content": "您確定要下單嗎？下單後不可取消。",
