delete User function

--- a/admin/src/lang/en-us.json
+++ b/admin/src/lang/en-us.json
@@ -1,61 +1,69 @@
 {
-    "translate": "中文/English",
-    "logout": "Logout",
-    "logoutConfirm": "Are you sure you want to log out?",
-    "yes": "Yes",
-    "no": "No",
-    "home": "Home",
-    "menu": "Menu",
-    "name": "Name",
-    "nameCN": "Chinese Name",
-    "nameEN": "English Name",
-    "price": "Price",
-    "status": "Status",
-    "active": "on Sale",
-    "inactive": "off Sale",
-    "reset": "Reset",
-    "submit": "Submit",
-    "checkToView": "Check to view",
-    "personalInfo": "Personal Information",
-    "user": "User",
-    "staffId": "Staff ID",
-    "name_en": "Name(EN)",
-    "name_cn": "Name(CN)",
-    "email": "Email",
-    "userName": "Username",
-    "password": "Password",
-    "phoneNumber": "Phone Number",
-    "addUser": "Add User",
-    "editUser": "Edit User",
-    "address_cn": "Address(CN)",
-    "address_en": "Address(EN)",
-    "pleaseEnterValidPhoneNumber": "Please enter a valid phone number",
-    "pleaseEnterValidName": "Please enter a valid name",
-    "pleaseEnterValidEmail": "Please enter a valid email",
-    "pleaseEnterValidAddress": "Please enter a valid address",
-    "pleaseFillCorrectly": "Please fill in the form correctly",
-    "addSuccess": "Add successfully",
-    "addFailed": "Add failed",
-    "editSuccess": "Edit successfully",
-    "editFailed": "Edit failed",
-    "AddUserByExcel": "Add User By Excel",
-    "AddUserByForm": "Add User By Form",
-    "getTemplate": "Get the Excel Template",
-    "uploadExcel": "Upload Excel",
-    "loginSuccess": "Login Successfully",
-    "loginFailed": "Login Failed",
-    "logoutSuccess": "Logout Successfully",
-    "uploadSuccess": "Upload Successfully",
-    "uploadFail": "Upload Failed, please check all the data",
-    "submitSuccess": "Submit Successfully",
-    "submitFail": "Submit Failed, please check all the data",
-    "login": "Login",
-    "cancel": "Cancel",
-    "passwordRequired": "Please input your password!",
-    "usernameRequired": "Please input your username!",
-    "cancelUpload": "Canceled Upload",
-    "noPermission": "You have no permission to access this page",
-    "manage": "Manage",
-    "UserPermission": "User Permission",
-    "DishesType": "Dishes Type"
+  "translate": "中文/English",
+  "logout": "Logout",
+  "logoutConfirm": "Are you sure you want to log out?",
+  "yes": "Yes",
+  "no": "No",
+  "home": "Home",
+  "menu": "Menu",
+  "name": "Name",
+  "nameCN": "Chinese Name",
+  "nameEN": "English Name",
+  "price": "Price",
+  "status": "Status",
+  "active": "on Sale",
+  "inactive": "off Sale",
+  "reset": "Reset",
+  "submit": "Submit",
+  "checkToView": "Check to view",
+  "personalInfo": "Personal Information",
+  "user": "User",
+  "staffId": "Staff ID",
+  "name_en": "Name(EN)",
+  "name_cn": "Name(CN)",
+  "email": "Email",
+  "userName": "Username",
+  "password": "Password",
+  "phoneNumber": "Phone Number",
+  "addUser": "Add User",
+  "editUser": "Edit User",
+  "address_cn": "Address(CN)",
+  "address_en": "Address(EN)",
+  "pleaseEnterValidPhoneNumber": "Please enter a valid phone number",
+  "pleaseEnterValidName": "Please enter a valid name",
+  "pleaseEnterValidEmail": "Please enter a valid email",
+  "pleaseEnterValidAddress": "Please enter a valid address",
+  "pleaseFillCorrectly": "Please fill in the form correctly",
+  "addSuccess": "Add successfully",
+  "addFailed": "Add failed",
+  "editSuccess": "Edit successfully",
+  "editFailed": "Edit failed",
+  "AddUserByExcel": "Add User By Excel",
+  "AddUserByForm": "Add User By Form",
+  "getTemplate": "Get the Excel Template",
+  "uploadExcel": "Upload Excel",
+  "loginSuccess": "Login Successfully",
+  "loginFailed": "Login Failed",
+  "logoutSuccess": "Logout Successfully",
+  "uploadSuccess": "Upload Successfully",
+  "uploadFail": "Upload Failed, please check all the data",
+  "submitSuccess": "Submit Successfully",
+  "submitFail": "Submit Failed, please check all the data",
+  "login": "Login",
+  "cancel": "Cancel",
+  "passwordRequired": "Please input your password!",
+  "usernameRequired": "Please input your username!",
+  "cancelUpload": "Canceled Upload",
+  "noPermission": "You have no permission to access this page",
+  "manage": "Manage",
+  "UserPermission": "User Permission",
+  "DishesType": "Dishes Type",
+  "plsoperateNormal ": "Please operate normally",
+  "delete": "Delete",
+  "userRole": "User Permission",
+  "staff": "Staff",
+  "admin": "Admin",
+  "deleteSuccess": "Delete Successfully",
+  "deleteUser": "Delete User",
+  "ConfirmDelete": "Are you sure you want to delete this user?"
 }
