--- a/admin/src/lang/zh-hk.json
+++ b/admin/src/lang/zh-hk.json
@@ -1,61 +1,69 @@
 {
-    "translate": "English/中文",
-    "logout": "登出",
-    "logoutConfirm": "確定要登出嗎？",
-    "yes": "是",
-    "no": "否",
-    "home": "首頁",
-    "menu": "菜單",
-    "name": "名稱",
-    "nameCN": "名稱(簡)",
-    "nameEN": "名稱(英)",
-    "price": "價格",
-    "status": "狀態",
-    "active": "在售",
-    "inactive": "停售",
-    "reset": "重置",
-    "submit": "提交",
-    "checkToView": "點選查看",
-    "personalInfo": "個人資料",
-    "user": "用戶",
-    "staffId": "員工編號",
-    "name_en": "姓名(英)",
-    "name_cn": "姓名(中)",
-    "email": "電郵",
-    "userName": "用戶名",
-    "password": "密碼",
-    "phoneNumber": "電話號碼",
-    "addUser": "新增用戶",
-    "editUser": "編輯用戶",
-    "address_cn": "地址(中)",
-    "address_en": "地址(英)",
-    "pleaseEnterValidPhoneNumber": "請輸入有效的電話號碼",
-    "pleaseEnterValidName": "請輸入有效的名稱",
-    "pleaseEnterValidEmail": "請輸入有效的電郵",
-    "pleaseEnterValidAddress": "請輸入有效的地址",
-    "pleaseFillCorrectly": "請正確填寫表格",
-    "addSuccess": "新增成功",
-    "addFailed": "新增失敗",
-    "editSuccess": "編輯成功",
-    "editFailed": "編輯失敗",
-    "AddUserByExcel": "通過Excel添加用戶",
-    "AddUserByForm": "通過表格添加用戶",
-    "getTemplate":"獲取Excel範本",
-    "uploadExcel":"上傳Excel",
-    "loginSuccess": "登入成功",
-    "loginFailed": "登入失敗",
-    "logoutSuccess": "登出成功",
-    "uploadSuccess": "上傳成功",
-    "uploadFailed": "上傳失敗，請檢查所有數據",
-    "submitSuccess": "提交成功",
-    "submitFail": "提交失敗，請檢查所有數據",
-    "login": "登入",
-    "cancel": "取消",
-    "passwordRequired": "請輸入您的密碼",
-    "usernameRequired": "請輸入您的用戶名",
-    "cancelUpload": "已取消上傳",
-    "noPermission": "您沒有權限訪問此頁面",
-    "manage": "管理",
-    "UserPermission": "用戶權限",
-    "DishesType": "菜品類型"
+  "translate": "English/中文",
+  "logout": "登出",
+  "logoutConfirm": "確定要登出嗎？",
+  "yes": "是",
+  "no": "否",
+  "home": "首頁",
+  "menu": "菜單",
+  "name": "名稱",
+  "nameCN": "名稱(簡)",
+  "nameEN": "名稱(英)",
+  "price": "價格",
+  "status": "狀態",
+  "active": "在售",
+  "inactive": "停售",
+  "reset": "重置",
+  "submit": "提交",
+  "checkToView": "點選查看",
+  "personalInfo": "個人資料",
+  "user": "用戶",
+  "staffId": "員工編號",
+  "name_en": "姓名(英)",
+  "name_cn": "姓名(中)",
+  "email": "電郵",
+  "userName": "用戶名",
+  "password": "密碼",
+  "phoneNumber": "電話號碼",
+  "addUser": "新增用戶",
+  "editUser": "編輯用戶",
+  "address_cn": "地址(中)",
+  "address_en": "地址(英)",
+  "pleaseEnterValidPhoneNumber": "請輸入有效的電話號碼",
+  "pleaseEnterValidName": "請輸入有效的名稱",
+  "pleaseEnterValidEmail": "請輸入有效的電郵",
+  "pleaseEnterValidAddress": "請輸入有效的地址",
+  "pleaseFillCorrectly": "請正確填寫表格",
+  "addSuccess": "新增成功",
+  "addFailed": "新增失敗",
+  "editSuccess": "編輯成功",
+  "editFailed": "編輯失敗",
+  "AddUserByExcel": "通過Excel添加用戶",
+  "AddUserByForm": "通過表格添加用戶",
+  "getTemplate": "獲取Excel範本",
+  "uploadExcel": "上傳Excel",
+  "loginSuccess": "登入成功",
+  "loginFailed": "登入失敗",
+  "logoutSuccess": "登出成功",
+  "uploadSuccess": "上傳成功",
+  "uploadFailed": "上傳失敗，請檢查所有數據",
+  "submitSuccess": "提交成功",
+  "submitFail": "提交失敗，請檢查所有數據",
+  "login": "登入",
+  "cancel": "取消",
+  "passwordRequired": "請輸入您的密碼",
+  "usernameRequired": "請輸入您的用戶名",
+  "cancelUpload": "已取消上傳",
+  "noPermission": "您沒有權限訪問此頁面",
+  "manage": "管理",
+  "UserPermission": "用戶權限",
+  "DishesType": "菜品類型",
+  "plsoperateNormal ": "請正常操作",
+  "delete": "刪除",
+  "userRole": "用戶權限",
+  "staff": "員工",
+  "admin": "管理員",
+  "deleteSuccess": "刪除成功",
+  "deleteUser": "刪除用戶",
+  "ConfirmDelete": "確定要刪除嗎？"
 }
