--- a/admin/src/lang/en-us.json
+++ b/admin/src/lang/en-us.json
@@ -65,5 +65,6 @@
   "admin": "Admin",
   "deleteSuccess": "Delete Successfully",
   "deleteUser": "Delete User",
-  "ConfirmDelete": "Are you sure you want to delete this user?"
+  "ConfirmDelete": "Are you sure you want to delete this user?",
+  "specialItem": "Special Item"
 }
