--- a/admin/src/lang/en-us.json
+++ b/admin/src/lang/en-us.json
@@ -66,5 +66,11 @@
   "deleteSuccess": "Delete Successfully",
   "deleteUser": "Delete User",
   "ConfirmDelete": "Are you sure you want to delete this user?",
-  "specialItem": "Special Item"
+  "specialItem": "Special Item",
+  "zh-hk": "Traditional Chinese",
+  "zh-cn": "Simplified Chinese",
+  "en-us": "English",
+  "addOption": "Add Option",
+  "editOption": "Edit Option",
+  "pleaseEnterValidInfo": "Please enter valid information"
 }
