customer flow: custom item and add order logic and basic UI

--- a/customer/src/i18n/zh-CN.json
+++ b/customer/src/i18n/zh-CN.json
@@ -25,5 +25,7 @@
   "confirm_order_content": "您确定要下单吗？下单后不可取消。",
   "order_placed_successfully": "下单成功",
   "order_placement_failed": "下单失败",
-  "sold_out": "售罄"
+  "sold_out": "售罄",
+  "custom": "自定义",
+  "normal": "正常"
 }
