--- a/customer/src/i18n/en.json
+++ b/customer/src/i18n/en.json
@@ -25,5 +25,7 @@
   "confirm_order_content": "Are you sure you want to place this order? No cancellation after order is placed.",
   "order_placed_successfully": "Order placed successfully",
   "order_placement_failed": "Order placement failed",
-  "sold_out": "Sold Out"
+  "sold_out": "Sold Out",
+  "custom": "Custom",
+  "normal": "Normal"
 }
