database sql update

--- a/admin/src/lang/en-us.json
+++ b/admin/src/lang/en-us.json
@@ -71,12 +71,23 @@
   "addCustomOption": "Add Custom Option",
   "editCustomOption": "Edit Custom Option",
   "pleaseEnterValidInfo": "Please enter valid information",
-  "priceAdjustment" : "Price Adjustment",
+  "priceAdjustment": "Price Adjustment",
   "deleteCustomOption": "Delete Custom Option",
   "deleteOptionFailed": "Delete Failed, this option is in use",
   "emptyCustomOptionValue": "At least one value of custom option is required",
   "customOptionExist": "Custom option information repeated",
   "customOptionValueExist": "Custom option value repeated",
   "add": "Add",
-  "edit": "Edit"
+  "edit": "Edit",
+  "editDishesType": "Edit Dishes Type",
+  "addDishesType": "Add Dishes Type",
+  "deleteDishesType": "Delete Dishes Type",
+  "pleaseEnterChinese": "Please enter Chinese",
+  "pleaseEnterEnglish": "Please enter English",
+  "editDishesTypeSuccess": "Edit Dishes Type Successfully",
+  "editDishesTypeFailed": "Edit Dishes Type Failed, data repeated",
+  "addDishesTypeSuccess": "Add Dishes Type Successfully",
+  "addDishesTypeFailed": "Add Dishes Type Failed, data repeated",
+  "deleteDishesTypeSuccess": "Delete Dishes Type Successfully",
+  "deleteDishesTypeFailed": "Delete Dishes Type Failed, this type is in use"
 }
