--- a/admin/src/lang/zh-hk.json
+++ b/admin/src/lang/zh-hk.json
@@ -77,6 +77,7 @@
   "emptyCustomOptionValue": "最少需要一個特製項目選項",
   "customOptionExist": "特製項目內容有重複",
   "customOptionValueExist": "特製項目選項有重複",
+  "editCustomOptionSuccess": "編輯特製項目成功",
   "add": "新增",
   "edit": "編輯",
   "editDishesType": "編輯菜品類型",
