rewite the menu

--- a/admin/src/lang/en-us.json
+++ b/admin/src/lang/en-us.json
@@ -11,8 +11,8 @@
   "nameEN": "English Name",
   "price": "Price",
   "status": "Status",
-  "active": "on Sale",
-  "inactive": "off Sale",
+  "active": "On Sale",
+  "inactive": "Off Sale",
   "reset": "Reset",
   "submit": "Submit",
   "checkToView": "Check to view",
