Systems Profile, Kitchen order page

--- a/admin/src/lang/en-us.json
+++ b/admin/src/lang/en-us.json
@@ -90,5 +90,51 @@
   "addDishesTypeSuccess": "Add Dishes Type Successfully",
   "addDishesTypeFailed": "Add Dishes Type Failed, data repeated",
   "deleteDishesTypeSuccess": "Delete Dishes Type Successfully",
-  "deleteDishesTypeFailed": "Delete Dishes Type Failed, this type is in use"
+  "deleteDishesTypeFailed": "Delete Dishes Type Failed, this type is in use",
+  "orders": "Orders",
+  "pendingOrders": "Pending Orders",
+  "markedAsDoneOrders": "Marked as Done",
+  "orderNumber": "Order No.",
+  "item": "Item",
+  "customization": "Customization",
+  "customPrice": "Custom Price",
+  "quantity": "Quantity",
+  "tableName": "Table",
+  "elapsedTime": "Elapsed Time",
+  "orderedAt": "Ordered At",
+  "actions": "Actions",
+  "complete": "Complete",
+  "reject": "Reject",
+  "undo": "Undo",
+  "statusUpdateSuccess": "Status updated successfully",
+  "statusUpdateFailed": "Failed to update status",
+  "fetchOrdersFailed": "Failed to fetch orders",
+  "confirm": "Confirm",
+  "rejectOrderConfirm": "Reject Order",
+  "rejectOrderConfirmText": "Are you sure you want to reject this order?",
+  "changeTable": "Change Table",
+  "currentTable": "Current Table",
+  "newTable": "New Table",
+  "enterNewTable": "Enter new table name",
+  "tableNameRequired": "Please enter a table name",
+  "changeThisOrder": "Change This Order",
+  "changeAllOrders": "Change All Orders",
+  "tableUpdateSuccess": "Table updated successfully",
+  "tableUpdateFailed": "Failed to update table",
+  "allTablesUpdateSuccess": "All tables updated successfully",
+  "allTablesUpdateFailed": "Failed to update all tables",
+  "allTables": "All Tables",
+  "noOrders": "No orders found",
+  "noPendingOrders": "No pending orders",
+  "noMarkedAsDoneOrders": "No marked as done orders",
+  "minutesTimeout": "minutes - Mark orders that exceed this time",
+  "editRestaurantName": "Edit Restaurant Name",
+  "systemSettings": "System",
+  "disableOrdering": "Disable Ordering",
+  "requireServiceCharge": "Require Service Charge",
+  "requireFactoryEmployeeCheck": "Require Factory Employee Check",
+  "save": "Save",
+  "updateSettingsSuccess": "System settings updated successfully",
+  "updateSettingsFailed": "Failed to update system settings",
+  "fetchDataFailed": "Failed to fetch data"
 }
