--- a/admin/src/lang/zh-hk.json
+++ b/admin/src/lang/zh-hk.json
@@ -90,5 +90,51 @@
   "addDishesTypeSuccess": "新增菜品類型成功",
   "addDishesTypeFailed": "新增菜品類型失敗, 數據重複",
   "deleteDishesTypeSuccess": "刪除菜品類型成功",
-  "deleteDishesTypeFailed": "刪除菜品類型失敗, 此類型正在使用"
+  "deleteDishesTypeFailed": "刪除菜品類型失敗, 此類型正在使用",
+  "orders": "訂單",
+  "pendingOrders": "待處理訂單",
+  "markedAsDoneOrders": "標記為完成",
+  "orderNumber": "訂單編號",
+  "item": "項目",
+  "customization": "特製內容",
+  "customPrice": "特製價格",
+  "quantity": "數量",
+  "tableName": "桌號",
+  "elapsedTime": "經過時間",
+  "orderedAt": "下單時間",
+  "actions": "操作",
+  "complete": "完成",
+  "reject": "拒絕",
+  "undo": "撤銷",
+  "statusUpdateSuccess": "狀態更新成功",
+  "statusUpdateFailed": "狀態更新失敗",
+  "fetchOrdersFailed": "獲取訂單失敗",
+  "confirm": "確定",
+  "rejectOrderConfirm": "拒絕訂單",
+  "rejectOrderConfirmText": "確定要拒絕這個訂單嗎？",
+  "changeTable": "修改桌號",
+  "currentTable": "當前桌號",
+  "newTable": "新桌號",
+  "enterNewTable": "請輸入新桌號",
+  "tableNameRequired": "請輸入桌號",
+  "changeThisOrder": "修改此訂單",
+  "changeAllOrders": "修改全部訂單",
+  "tableUpdateSuccess": "桌號更新成功",
+  "tableUpdateFailed": "桌號更新失敗",
+  "allTablesUpdateSuccess": "所有桌號更新成功",
+  "allTablesUpdateFailed": "所有桌號更新失敗",
+  "allTables": "所有桌號",
+  "noOrders": "沒有找到訂單",
+  "noPendingOrders": "沒有待處理訂單",
+  "noMarkedAsDoneOrders": "沒有標記為完成的訂單",
+  "minutesTimeout": "分鐘 - 標記超過此時間的訂單",
+  "editRestaurantName": "編輯餐廳名稱",
+  "systemSettings": "系統設定",
+  "disableOrdering": "停用點餐",
+  "requireServiceCharge": "需要服務費",
+  "requireFactoryEmployeeCheck": "需要工廠員工檢查",
+  "save": "保存",
+  "updateSettingsSuccess": "系統設定更新成功",
+  "updateSettingsFailed": "系統設定更新失敗",
+  "fetchDataFailed": "獲取數據失敗"
 }
